crates/rulesteward-fapolicyd/tests/snapshots/fapd-E02__malformed-uid.snap
---
source: crates/rulesteward-fapolicyd/tests/snapshot_test.rs
expression: rendered
---
parse=ok
diagnostics=1
[fapd-E02] sev=Error line=1 col=1 span=0..23 :: invalid value for `uid=`: expected u32 decimal, name, or `unset`
