crates/rulesteward-fapolicyd/tests/snapshots/fapd-E02__non-hex-filehash.snap
---
source: crates/rulesteward-fapolicyd/tests/snapshot_test.rs
expression: rendered
---
parse=ok
diagnostics=1
[fapd-E02] sev=Error line=1 col=1 span=0..91 :: invalid value for `filehash=`: expected a hex digest, contains non-hex character
