crates/rulesteward-fapolicyd/tests/snapshots/fapd-E02__short-filehash.snap
---
source: crates/rulesteward-fapolicyd/tests/snapshot_test.rs
expression: rendered
---
parse=ok
diagnostics=1
[fapd-E02] sev=Error line=1 col=1 span=0..29 :: invalid value for `filehash=`: expected 32, 40, 64, or 128 hex chars, got 3 chars
